--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-scroll": "^1.9.0",
     "swiper": "^11.1.3"
   },
   "devDependencies": {
