--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "hamburger-react": "^2.5.1",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
